--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.6.0",
     "chokidar": "^3.3.1",
     "electron": "^8.0.0",
+    "electron-builder": "^22.3.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.17",
     "postcss-import": "^12.0.1",
@@ -41,7 +42,9 @@
     "pure-electron": "electron .",
     "pure-electron:dev": "NODE_ENV=development electron .",
     "tron": "run-s build pure-electron",
-    "tron:dev": "run-p dev pure-electron:dev"
+    "tron:dev": "run-p dev pure-electron:dev",
+    "pure-dist-darwin": "electron-builder --dir --mac --config electron-builder.yml",
+    "dist-darwin": "run-s build pure-dist-darwin"
   },
   "dependencies": {
     "postcss-input-range": "^4.0.0",
