--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "main": "./src/electron.js",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@fullhuman/postcss-purgecss": "^2.0.6",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
     "autoprefixer": "^9.6.0",
     "chokidar": "^3.3.1",
     "electron": "^8.0.0",
@@ -20,17 +22,15 @@
     "prettier": "^1.19.1",
     "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.10.1",
-    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.2.0",
     "sirv-cli": "^0.4.0",
-    "stylelint": "^13.0.0",
+    "stylelint": "^13.1.0",
     "stylelint-config-recommended": "^3.0.0",
-    "svelte": "^3.12.1",
-    "svelte-preprocess": "^2.14.0",
+    "svelte": "^3.18.2",
+    "svelte-preprocess": "^3.4.0",
     "tailwindcss": "^1.0.3"
   },
   "scripts": {
